- ``Buildings`` module: add ``getOwner`` (using the ``Units::get_cached_unit_by_global_id`` mechanic) to reflect changes in 51.11
- ``Units::teleport``: projectile information is now cleared for teleported units
- ``Buildings::setOwner``: updated for changes in 51.11

## Lua
- ``dfhack.military.addToSquad``: expose Military API function
- ``dfhack.buildings.getOwner``: make new Buildings API available to Lua

# 51.10-r1

## Misc Improvements
- Compatibility with DF 51.10

# 51.09-r1

## New Features
- `gui/journal`: Ctrl-j hotkey to launch `gui/journal` now works in adventure mode!

## Fixes
- Fix processing error in the overlay that displays unit preferences in the baron selection list

## API
- ``Filesystem`` module: rewritten to use C++ standard library components, for better portability

# 51.08-r1

## Misc Improvements
- Compatibility update for DF 51.08

# 51.07-r1

## New Features
- `spectate`: can now specify number of seconds (in real time) before switching to follow a new unit
- `spectate`: new "cinematic-action" mode that dynamically speeds up perspective switches based on intensity of conflict
- `spectate`: new global keybinding for toggling spectate mode: Ctrl-Shift-S
- `spectate`: new overlay panel that allows you to cycle through following next/previous units (regardless of whether spectate mode is enabled)
- `gui/sitemap`: is now the official "go to" tool. new global hotkey for fort and adventure mode: Ctrl-G

## Fixes
- Windows console: fix possible hang if the console returns a too-small window width (for any reason)
- `createitem`: produced items will now end up at the look cursor position (if it is active)
- `spectate`: don't allow temporarily modified announcement settings to be written to disk when "auto-unpause" mode is enabled
- `changevein`: fix a crash that could occur when attempting to change a vein into itself
- `overlay`: reset draw context between rendering widgets so context changes can't propagate from widget to widget